# simple-graphql-service-with-db

./: .gitignore  Makefile  README.md  app.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5ebcdb9853bd_initial_schema.py  d9e332625d1c_add_index_on_sequence_gene_name.py
application/: __init__.py  construct_service.py
domain/: __init__.py  construct.py
persistence/: __init__.py  construct_datastore.py  database_url.py  db.py
persistence/models/: __init__.py  entities.py
presentation/: __init__.py  dependencies.py  router.py
presentation/graphql/: __init__.py  schema.py  types.py
scripts/: apply_migrations.py  create_local_db.py  seed.py
