[project]
name = "simple-graphql-service-with-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "sqlalchemy>=2.0.49",
    "strawberry-graphql[fastapi]>=0.284.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
]
